--- a/jobs/templates/jobs/home.html
+++ b/jobs/templates/jobs/home.html
@@ -61,18 +61,24 @@
     </div>
   </section>
 
+
   <div class="album py-5 bg-light">
     <div class="container">
-
       <div class="row">
+      {% for job in jobs.all %}
+      <!-- Loop through each job -->
         <div class="col-md-4">
-          <div class="card mb-4 shadow-sm">
-            <svg class="bd-placeholder-img card-img-top" width="100%" height="225" xmlns="http://www.w3.org/2000/svg" preserveAspectRatio="xMidYMid slice" focusable="false" role="img" aria-label="Placeholder: Thumbnail"><title>Placeholder</title><rect width="100%" height="100%" fill="#55595c"/><text x="50%" y="50%" fill="#eceeef" dy=".3em">Thumbnail</text></svg>
+          <div class="card mb-4 box-shadow">
+            <img class="card-img-top" src = "{{ job.image.url }}" />
             <div class="card-body">
-              <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+              <p class="card-text">{{ job.summary }}</p>
             </div>
           </div>
         </div>
+        {% endfor %}
+
+
+
       </div>
     </div>
   </div>
