--- a/blog/templates/blog/allblogs.html
+++ b/blog/templates/blog/allblogs.html
@@ -60,9 +60,13 @@
   <h2>Latest Post</h2>
   <hr />
   {% for blog in blogs.all %}
-    {{ blog.title }}
+    <a href=""><h3>{{ blog.title }}</h3></a>
+    {{ blog.pub_date_pretty }}
+    <br />
+    <img class = "img-fluid" src="{{ blog.image.url }}" height=200 width=200>
+    <br />
+    <p> {{ blog.summary }} </p>
   {% endfor %}
-
   </div>
 
 </main>
